fixed table scroll, the misalign is a normal bug, not fixable without position sticky which is ugly

--- a/front/quest_list.css
+++ b/front/quest_list.css
@@ -31,6 +31,8 @@ div.table-title {
   width: 100%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   animation: float 5s infinite;
+
+  table-layout: fixed;
 }
  
 th {
@@ -139,10 +141,47 @@ td.text-right {
   margin: 0;
   border: 0;
 }
-
-.table-inside {
+/* 
+ {
   display: block;
   overflow: scroll;
   max-height: 600px;
   overflow-x: hidden;
+} */
+
+.table-inside thead, .table-inside tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+.table-inside thead {
+  //display:table-header-group;
+}
+
+.table_body {
+  display: block;
+  overflow-y: scroll;
+  max-height: 669px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track
+{
+	border: 5px solid white;
+	// border color does not support transparent on scrollbar
+	// border-color: transparent;
+	background-color: #b2bec3;
+}
+
+::-webkit-scrollbar
+{
+	width: 15px;
+	background-color: #dfe6e9;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #74b9ff;
+	border-radius: 10px;
 }
